testsuite/tests/interpreter_errors/invalid_is_clause_left_operand/test.out
script.lkql:1:15: error: Type error: expected Node but got Str
1 | select p when "Hello" is ObjectDecl
  |               ^^^^^^^

